# cal-meet-bot

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  OVERVIEW.md  README.md  docker-compose.yml  fix_test.py  patch_atomic.py  patch_repo.py  patch_repo2.py  patch_service.py  pyproject.toml  requirements.txt  run_local.sh
deploy/nginx/templates/: default.conf.template
docs/: backend-detailed-design.md  bot-interaction-flow.md  deployment.md  manual-testing-readiness.md
scripts/: grant_manager.py  init-letsencrypt.sh  seed_users.py
src/bot_vstrechi/: __init__.py  asgi.py  worker_entrypoint.py
src/bot_vstrechi/api/: AGENTS.md  __init__.py  webhook.py
src/bot_vstrechi/application/: AGENTS.md  service.py
src/bot_vstrechi/calendar/: AGENTS.md  __init__.py  client.py  (+1 more)
tests/: AGENTS.md  test_calendar_recurring.py  test_calendar_sync_reconcile.py  test_calendar_sync_worker.py  test_deadline_policy.py  test_docs_consistency.py  test_foundation.py  test_group_status_message.py  test_lifecycle_edge_cases.py  test_phase2_persistence_scheduler.py  test_phase3_integrations.py  test_phase4_transport_and_gateway.py  test_phase5_bootstrap_runtime.py  test_phase5_e2e_runbook.py  test_phase5_outbox.py  test_phase6_settings.py  test_phase6_telegram_client.py  test_phase6_webhook_hardening.py  test_phase7_audit_logging.py  test_phase7_side_effects.py  test_phase8_manual_commands.py  test_repository_calendar_first.py  test_repository_retention.py  test_state_machine_bug.py  test_telegram_adapter_bug.py  test_timeout_expired_bug.py
(+25 files in other folders)
